public/style/style.css
body {
  height: 100%;
  width: 100%;
  margin: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  background: url("../images/welcome-background.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.background-dark-cover {
  min-height: 100%;
  min-width: 100%;
  width: 100%;
  height: auto;
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
  background-color: rgba(0, 0, 0, 0.75);;
}

.background-dark-cover-activity {
  min-height: 100%;
  min-width: 100%;
  width: 100%;
  height: auto;
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
  background-color: rgba(0, 0, 0, 0.75);;
}

.loading-background {
  min-height: 100%;
  min-width: 100%;
  width: 100%;
  height: auto;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 100;
  background-color: rgba(0, 0, 0, 0.75);
}

.loading-spinner {
  position: fixed;
  left: 45%;
  margin-top: 200px;
  z-index: 101;
}

.show-user-container {
  min-height: 100%;
  min-width: 100%;
  width: 100%;
  height: auto;
  top: 0;
  left: 0;
}

.welcome-title {
    text-align: center;
    position: fixed;
    width: 100%;
    top: 15%;
    font-family: 'Jaldi', sans-serif;
    font-size: 48px;
    color:#303F9F;
    font-weight: 700;
    text-shadow: 1px 1px 1px rgba(255, 255, 255, .5);
    line-height: 45px;
}

.welcome-page {
  position: fixed;
  bottom: 15%;
  width: 100%;
}

.login-container {
  padding: 10px 20px 20px;
  margin: auto;
  display: table;
  text-align: center;
}

.long-text {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: inline;
}

.submit-button {
  margin-top: 20px !important;
}

.delete-button {
  margin-top: 20px !important;
  color: red !important;
}

.error-alert {
  color: red;
  margin-bottom: -19px;
}

.not-registered {
  margin-top: 20px;
  color: #687486;
}

a {
  color: #303F9F;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.under-the-header {
  padding-top: 64px;
}

.under-the-header-with-button {
  padding-top: 105px;
}

.newTripIcon {
  position: relative;
  top: 6px;
  color: #303F9F !important;
}

.dialog-buttons {
  width: 100%;
  float: right;
}

.createNewTripLink {
  color: #303F9F;
}

.trip-card {
  margin: 0 auto 20px;
  background: #FFFFFF;
  max-width: 820px;
}

.cardHeader {
  padding-bottom: 0px;
  text-align: right;
}

.form-container {
  width: 400px;
  padding: 10px 10px 10px;
  margin: 20px auto 20px;
  display: table;
}

.edit-icon {
  color: rgba(255, 255, 255, .35) !important;
  width: 22px !important;
  height: 22px !important;
  position: relative;
  top: 5px;
  left: 10px;
}

.edit-icon-container {
  width: 22px;
}

.new-activity-date {
  color: #FFFFFF;
  font-size: 18px;
  font-family: 'Jaldi', sans-serif;
  font-weight: 400;
  border-bottom-width: 3px;
  border-bottom-style: dotted;
  border-bottom-color: #7381D9;
}

.required-field-text {
  text-align: center;
  font-size: 12px;
  color: red;
  margin-top: 20px;
  margin-bottom: 10px;
}

.current-past-trips-button {
  display: inline !important;
  min-width: 100% !important;
  position: fixed;
  top: 64px;
  z-index: 20;
}

.save-cancel-buttons {
  text-align: right;
}

/* @responsive styling
----------------------------------------------- */
@media (max-width: 860px) {

  .trip-card {
    margin: 0 20px 20px 20px;
  }

}

@media (max-height: 700px) {

  .welcome-title {
    top: 10px;
  }

  .welcome-page {
    top: 215px;
  }

}

@media (max-height: 450px) {

  .welcome-title {
    text-align: left;
    top: 20%;
    left: 63%;
  }

  .welcome-page {
    top: 10%;
    left: 5%;
    width: inherit;
  }

}

@media (max-width: 400px) {

  .form-container {
    width: 100%;
    margin: 0px;
    box-shadow: none !important;
    padding: 0;
  }

  .background-dark-cover-activity {
    background-color: rgba(255, 255, 255, 1);
  }

}

